test/Fail/Issue7892.err
Issue7892.agda:23.19-20: error: [UnequalTerms]
"bar" !=< "foo" of type String
when checking that the expression r has type R "foo"
